# miind_opensim

./: CMakeLists.txt  MoBL_ARMS_module2_4_bictri_afferent.osim  MoBL_ARMS_module2_4_onemuscle_afferent.osim  NeuralController.cpp  NeuralController.h  arm.cpp  arm.mmxml  draw_forces.py  lif.model  lif_-0.1_0_0_0_.mat  lif_0.1_0_0_0_.mat  plot.py
Afferent/: AfferentAnalysis.cpp  AfferentAnalysis.h  Lin02GolgiTendonOrgan.cpp  Lin02GolgiTendonOrgan.h  Mileusnic06Spindle.cpp  Mileusnic06Spindle.h  Millard12EqMuscleWithAfferents.cpp  Millard12EqMuscleWithAfferents.h  SpindleController.cpp  SpindleController.h  TugOfWarController.cpp  TugOfWarController.h
modified_arm_model/: CMakeLists.txt  MoBL_ARMS_module2_4_allmuscles.osim  MoBL_ARMS_module2_4_onemuscle.osim  MoBL_ARMS_module2_4_onemuscle_afferent.osim  how_to_cmake  test.cpp  test_redux.cpp
modified_arm_model/Afferent/: AfferentAnalysis.cpp  AfferentAnalysis.h  Lin02GolgiTendonOrgan.cpp  Lin02GolgiTendonOrgan.h  Mileusnic06Spindle.cpp  Mileusnic06Spindle.h  Millard12EqMuscleWithAfferents.cpp  Millard12EqMuscleWithAfferents.h  SpindleController.cpp  SpindleController.h  TugOfWarController.cpp  TugOfWarController.h
